<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PK30Demo</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="device_rssi">rssi</string>
    <string name="text_detail">detail</string>

    <string name="scan_barcode_title">Barcode scanning</string>
    <string name="scan_qrcode_title">QR code scanning</string>
    <string name="scan_allcode_title">QR code or barcode scanning</string>
    <string name="scan_barcode_hint">Scan the barcode into the framing frame to automatically scan</string>
    <string name="scan_qrcode_hint">By scanning the QR code into the frame, it will automatically scan</string>
    <string name="scan_allcode_hint">Scan the QR code or barcode into the framing frame to automatically scan</string>
    <string name="title_activity_sao_mao">SaoMaoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="waybill_number">Waybill No.:</string>
    <string name="length">length</string>
    <string name="width">width</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="cargo_information">Cargo information</string>
    <string name="actual_weight">Actual weight:</string>
    <string name="actual_weight_">actual weight</string>
    <string name="volume_weight">Volume weight:</string>
    <string name="volume_weight_">volume weight</string>
    <string name="cargo_dimensions">Size:</string>
    <string name="cargo_dimensions_">size</string>
    <string name="Number">Number:</string>
    <string name="packaging_type">Packaging type:</string>
    <string name="packaging_type_">type</string>
    <string name="carton">carton</string>
    <string name="cargo_type">Cargo type:</string>
    <string name="clothing">clothing</string>
    <string name="Shutdown">Shutdown</string>
    <string name="buzzer">Buzzer</string>
    <string name="hardware_version">Hardware version</string>
    <string name="software_version">Software version</string>
    <string name="measuring_weight">weight</string>
    <string name="measuring_length">length</string>
    <string name="weight_length_width_height">Weight,length,width,height</string>
    <string name="length_width_height_weight">Length,width,height,weight</string>
    <string name="operating_mode">Operating mode</string>
    <string name="turn_off_measurement">Stop</string>
    <string name="start_measurement">Start</string>
    <string name="consignor_information">Consignor information</string>
    <string name="consignor">Consignor:</string>
    <string name="Aaron">Aaron</string>
    <string name="phone_number">Phone No.:</string>
    <string name="courier">Company:</string>
    <string name="Beijing_Speedata">Beijing Speedata Technology Co., LTD</string>
    <string name="cAddress">Address:</string>
    <string name="_26_1_03">No.28 Shangdi Sixth Street, Haidian District, Beijing</string>
    <string name="Addressee">Receiver:</string>
    <string name="Addressee_info">Receiver information</string>
    <string name="Speedatagroup">Speedatagroup</string>
    <string name="Receiving_company">Company:</string>
    <string name="Beijing_Speedatagroup">Beijing Speedatagroup LTD</string>
    <string name="_26_1_04">South Road, Bantian Street, Longgang District, Shenzhen</string>
    <string name="Save">Save</string>
    <string name="Connecting_device">Connecting device</string>
    <string name="Please_note">Please note that the cargo size data is correct.</string>
    <string name="Mode_change">Mode change to length measurement</string>
    <string name="Mode_change_to_w">Mode change to width measurement</string>
    <string name="Mode_change_to_h">Mode change to height measurement</string>
    <string name="Change_mode_to_wei">Mode change to weight measurement</string>
    <string name="Shut_down_successfully">Shut down successfully</string>
    <string name="Shutdown_failed">Shutdown failed</string>
    <string name="The_buzzer">The buzzer duration is set to</string>
    <string name="There_is_a_blank">There is a blank item, please complete the information</string>
    <string name="Successfully_saved">Successfully saved</string>
    <string name="Please_connect_the_PK">Please connect the PK30 device first.</string>
    <string name="Please_first_check">Please first check the measurement mode you want to start.</string>
    <string name="Scanning_barcode">Scanning barcode</string>
    <string name="QR_code">QR code scanning</string>
    <string name="haha">haha</string>
    <string name="Scan_again">Scan again</string>
    <string name="The_picture_is_incorrect">The picture is incorrect, or the picture is blurred!</string>
    <string name="Camera_open_error">Camera open error, please check if this permission is disabled!</string>
    <string name="switch_mode">Switch mode</string>

</resources>
