<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_software"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/software_version" />

        <TextView
            android:id="@+id/tv_software"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_hardware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardware_version" />

        <TextView
            android:id="@+id/tv_hardware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_fengming"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/buzzer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="150"
                android:maxHeight="2dp"
                android:minHeight="2dp"
                android:paddingLeft="12dp"
                android:paddingTop="3dp"
                android:paddingRight="12dp"
                android:paddingBottom="3dp"
                android:progressDrawable="@drawable/layer_progress"
                android:thumb="@drawable/shape_circle" />


            <TextView
                android:id="@+id/tv_seekbar_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="50"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Shutdown" />
</LinearLayout>